SQUAD-9-313 Fixed:Swagger not showing properly
